<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LION - Games, Music &amp; Draw</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="sign_in">Log In</string>
    <string name="create_account">Not register? Sign up here!</string>
    <string name="logout">Log out</string>
    <string name="dashboard">My Dashboard</string>
    <string name="items">4 items</string>
    <string name="game">Game</string>
    <string name="music">Music</string>
    <string name="draw">Draw</string>
    <string name="checkemail">Please check your email \n to finish create account!</string>
    <string name="forgotpassword">Forgot your password?</string>
    <string name="resetpass">Reset Pass</string>
</resources>
