<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewHomePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/good_morning_img_blur_1"
    tools:context=".DashboardModern"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtDashBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textColor="#FFF"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtDashBoard"
                android:layout_marginTop="9dp"
                android:text="@string/items"
                android:textColor="#C6CED5"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/lion"
                app:srcCompat="@drawable/lion" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/game" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/game"

                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="150dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/music" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/music"

                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/paint" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/draw"

                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLogOut"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="150dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/logout"

                    android:textColor="#FFF"
                    android:textSize="18sp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</ScrollView>