<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/good_night_img"
    tools:context=".LoginActivity"
    android:id="@+id/container_login">

    <TextView
        android:id="@+id/txtTimeMsgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/gochi_hand"
        android:text="Good Night"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/colorWhite"

        android:ems="10"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTimeMsgLogin" />

    <EditText
        android:id="@+id/edtPassSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailSignIn" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button_white"
        android:fontFamily="@font/helveticanueuebold"
        android:textFontWeight="500"
        android:text="@string/sign_in"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassSignIn" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/helveticaneue"
        android:text="@string/create_account"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <TextView
        android:id="@+id/txtTiengViet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/helveticaneue"
        android:text="Tiếng Việt"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtTiengAnh"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTiengAnh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/helveticaneue"
        android:text="English"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtTiengNhat"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtTiengNhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/helveticaneue"
        android:text="日本人"
        android:textColor="#FFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/helveticaneue"
        android:text="@string/forgotpassword"
        android:textColor="#FFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>